# Recon-Platform-R2

./: .gitignore  project_requirements.md  project_status.md  rules.md
.github/: copilot-instructions.md
roomba_ws/: environment.sh  rebuild.sh  requirements.txt  setup.sh
roomba_ws/config/: controller.yaml  hardware.yaml  nav2_params.yaml  simulation.yaml  slam_params.yaml  webui.yaml
roomba_ws/docker/: .env.example  docker-compose.yaml
roomba_ws/docs/: esp32_firmware.md
roomba_ws/src/roomba_bringup/: package.xml  setup.py
roomba_ws/src/roomba_bringup/launch/: full_system.launch.py
roomba_ws/src/roomba_control/: CMakeLists.txt  package.xml
roomba_ws/src/roomba_control/src/: bt_sim_node.cpp  draw_node.cpp  joy_control_node.cpp
roomba_ws/src/roomba_control/srv/: BtSimInject.srv
roomba_ws/src/roomba_db/: alembic.ini  package.xml  setup.cfg  setup.py
roomba_ws/src/roomba_db/roomba_db/: __init__.py  db_node.py  models.py
roomba_ws/src/roomba_db/roomba_db/migrations/: __init__.py  env.py
roomba_ws/src/roomba_db/roomba_db/migrations/versions/: 0001_initial_schema.py
roomba_ws/src/roomba_hardware/: CMakeLists.txt  package.xml
roomba_ws/src/roomba_hardware/src/: esp32_sensor_node.cpp  motor_controller.cpp  sim_motor_node.cpp  sim_sensor_node.cpp
roomba_ws/src/roomba_navigation/: CMakeLists.txt  package.xml
roomba_ws/src/roomba_navigation/src/: recon_node.cpp  sim_goal_follower.cpp  slam_bridge_node.cpp
roomba_ws/src/roomba_webui/: package.xml  setup.cfg  setup.py
roomba_ws/src/roomba_webui/roomba_webui/: __init__.py  app.py  bluetooth_manager.py  data_channels.py  logging_config.py  mock_data.py  ros_bridge.py
roomba_ws/src/roomba_webui/roomba_webui/static/css/: style.css
roomba_ws/src/roomba_webui/roomba_webui/static/js/: common.js
roomba_ws/src/roomba_webui/roomba_webui/templates/: base.html  bluetooth.html  controller.html  index.html  map.html
roomba_ws/tests/: test_bt_sim_node.cpp  test_db_node.py  test_draw_node.cpp  test_esp32_sensor_node.cpp  test_joy_control_node.cpp  test_motor_controller.cpp  test_recon_node.cpp  test_roomba_webui.py  test_sim_goal_follower.cpp  test_sim_motor_node.cpp  test_sim_sensor_node.cpp  test_slam_bridge_node.cpp
